updated the coordinates

--- a/Niryo-Coding-20240829/movement.ipynb
+++ b/Niryo-Coding-20240829/movement.ipynb
@@ -16,7 +16,7 @@
     "# Connect to robot & calibrate\n",
     "robot = NiryoRobot(robot_ip_address)\n",
     "robot.arm.calibrate_auto()\n",
-    "from recorded_positions import positions_dict \n",
+    "from recorded_positions import pickup_coordinates,dropoff_coordinates\n",
     "\n",
     "\n",
     "\n"
@@ -40,18 +40,52 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "# pickup position\n",
     "robot.tool.release_with_tool()\n",
-    "def get_position_coordinates(p):\n",
-    "    return positions_dict.get(p,'Invalid_position')\n",
+    "def get_pickup_coordinates(p):\n",
+    "    return pickup_coordinates.get(p,'Invalid_position')"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "def get_dropoff_coordinates(p):\n",
+    "    return dropoff_coordinates.get(p,'Invalid_position')"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# pickup position\n",
+    "\n",
+    "\n",
+    "# get the robot to the home_position first\n",
+    "home_position=get_pickup_coordinates('ho')\n",
+    "robot.arm.move_pose(home_position)\n",
     "\n",
     "position= input(\"which position should the arm move to: \")\n",
-    "position_coordinates = get_position_coordinates(position)\n",
+    "position_coordinates = get_pickup_coordinates(position)\n",
     "robot.arm.move_pose(position_coordinates)\n",
     "print(f'Moved to position: {position_coordinates}')\n",
     "pose_read = robot.arm.get_pose()\n",
     "print(f'current coordinates of the robot: {pose_read } ')\n",
     "robot.tool.grasp_with_tool()\n",
+    "\n",
+    "position= input(\"which position should the arm move to: \")\n",
+    "position_coordinates = get_dropoff_coordinates(position)\n",
+    "robot.arm.move_pose(position_coordinates)\n",
+    "print(f'Moved to position: {position_coordinates}')\n",
+    "pose_read = robot.arm.get_pose()\n",
+    "print(f'current coordinates of the robot: {pose_read } ')\n",
+    "robot.tool.release_with_tool()\n",
+    "\n",
+    "home_position=get_pickup_coordinates('ho')\n",
+    "robot.arm.move_pose(home_position)\n",
     "\n",
     "\n",
     "# home position name is h0.\n",
@@ -63,16 +97,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": [
-    "# drop off position\n",
-    "position= input(\"which position should the arm move to: \")\n",
-    "position_coordinates = get_position_coordinates(position)\n",
-    "robot.arm.move_pose(position_coordinates)\n",
-    "print(f'Moved to position: {position_coordinates}')\n",
-    "pose_read = robot.arm.get_pose()\n",
-    "print(f'current coordinates of the robot: {pose_read } ')\n",
-    "robot.tool.release_with_tool()\n"
-   ]
+   "source": ""
   },
   {
    "cell_type": "code",
