--- a/Niryo-Coding-20240829/segmentation.ipynb
+++ b/Niryo-Coding-20240829/segmentation.ipynb
@@ -29,61 +29,68 @@
    "source": [
     "import cv2\n",
     "import numpy as np\n",
+    "import torch\n",
+    "from torchvision import models, transforms\n",
+    "from pyniryo import NiryoRos, Vision  # Make sure to import necessary modules\n",
     "\n",
-    "# Define the colors for the chips\n",
+    "# Load the pretrained DeepLabV3 model\n",
+    "model = models.segmentation.deeplabv3_resnet101(pretrained=True)\n",
+    "model.eval()\n",
+    "\n",
+    "# Define transformations for the input\n",
+    "preprocess = transforms.Compose([\n",
+    "    transforms.ToPILImage(),\n",
+    "    transforms.Resize((480, 640)),  # Adjust size as needed\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+    "])\n",
+    "\n",
+    "# Define a mapping for colors\n",
     "colors = {\n",
-    "    \"robot\": (255, 0, 0),  # Blue for robot's chip\n",
-    "    \"opponent\": (0, 255, 0)  # Green for opponent's chip\n",
+    "    21: (255, 0, 0),  # Example for \"robot\" (blue)\n",
+    "    22: (0, 255, 0),  # Example for \"opponent\" (green)\n",
     "}\n",
     "\n",
-    "# Replace with your robot's camera URL\n",
-    "camera_url = 'http://<robot_ip>:<port>/video'  # Update with the correct URL\n",
-    "\n",
-    "# Capture video from the robot's camera\n",
-    "cap = cv2.VideoCapture(camera_url)\n",
+    "# Connect to the robot\n",
+    "# WIFI\n",
+    "# ros_instance = NiryoRos(\"10.10.10.10\")\n",
+    "# ETH\n",
+    "ros_instance = NiryoRos(\"169.254.200.200\")\n",
+    "vision = Vision(ros_instance)\n",
     "\n",
     "while True:\n",
-    "    ret, frame = cap.read()\n",
-    "    if not ret:\n",
-    "        break\n",
+    "    img_compressed = vision.get_img_compressed()\n",
+    "    camera_info = vision.get_camera_intrinsics()\n",
     "\n",
-    "    # Convert the frame to HSV color space for better color detection\n",
-    "    hsv = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\n",
+    "    img = pyniryo.uncompress_image(img_compressed)\n",
+    "    img_uncompressed = img\n",
+    "    img = pyniryo.undistort_image(img, camera_info.intrinsics, camera_info.distortion)\n",
     "\n",
-    "    # Define color ranges for the chips\n",
-    "    lower_blue = np.array([100, 150, 0])  # Adjust for robot's chip\n",
-    "    upper_blue = np.array([140, 255, 255])\n",
-    "    \n",
-    "    lower_green = np.array([40, 150, 0])  # Adjust for opponent's chip\n",
-    "    upper_green = np.array([80, 255, 255])\n",
+    "    # Preprocess the frame for the model\n",
+    "    input_tensor = preprocess(img)\n",
+    "    input_batch = input_tensor.unsqueeze(0)  # Add a batch dimension\n",
     "\n",
-    "    # Create masks for each color\n",
-    "    mask_robot = cv2.inRange(hsv, lower_blue, upper_blue)\n",
-    "    mask_opponent = cv2.inRange(hsv, lower_green, upper_green)\n",
+    "    # Run the model and get the output\n",
+    "    with torch.no_grad():\n",
+    "        output = model(input_batch)['out'][0]\n",
+    "    output_predictions = output.argmax(0).byte().cpu().numpy()\n",
     "\n",
-    "    # Find contours for robot's chip\n",
-    "    contours_robot, _ = cv2.findContours(mask_robot, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "    for contour in contours_robot:\n",
-    "        area = cv2.contourArea(contour)\n",
-    "        if area > 100:  # Minimum area to filter out noise\n",
-    "            ((x, y), radius) = cv2.minEnclosingCircle(contour)\n",
-    "            cv2.circle(frame, (int(x), int(y)), int(radius), colors[\"robot\"], 2)\n",
+    "    # Create a color mask for the segmented output\n",
+    "    segmented_frame = np.zeros_like(img)\n",
+    "    for label, color in colors.items():\n",
+    "        segmented_frame[output_predictions == label] = color\n",
     "\n",
-    "    # Find contours for opponent's chip\n",
-    "    contours_opponent, _ = cv2.findContours(mask_opponent, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "    for contour in contours_opponent:\n",
-    "        area = cv2.contourArea(contour)\n",
-    "        if area > 100:  # Minimum area to filter out noise\n",
-    "            ((x, y), radius) = cv2.minEnclosingCircle(contour)\n",
-    "            cv2.circle(frame, (int(x), int(y)), int(radius), colors[\"opponent\"], 2)\n",
+    "    # Combine the original frame with the segmented output\n",
+    "    combined_frame = cv2.addWeighted(img, 0.5, segmented_frame, 0.5, 0)\n",
     "\n",
     "    # Display the results\n",
-    "    cv2.imshow('Frame', frame)\n",
-    "\n",
+    "    cv2.imshow('Segmented Frame', combined_frame)\n",
+    "    cv.imshow(\"stream - raw\", img_uncompressed)\n",
+    "    cv.imshow(\"stream - undistorted\", img)\n",
+    "    \n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
     "\n",
-    "cap.release()\n",
     "cv2.destroyAllWindows()\n"
    ]
   },
