colored mask updated

--- a/Niryo-Coding-20240829/Untitled-1.ipynb
+++ b/Niryo-Coding-20240829/Untitled-1.ipynb
@@ -119,6 +119,75 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### for colored mask"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "import cv2\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "from segment_anything import SamPredictor, sam_model_registry\n",
+    "\n",
+    "# Initialize the SAM model (using the small version)\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "sam_checkpoint = \"sam_vit_b_01ec64.pth\"  # Make sure this path is correct\n",
+    "model_type = \"vit_b\"  # Use \"vit_b\" for the small version\n",
+    "\n",
+    "sam = sam_model_registry[model_type](checkpoint=sam_checkpoint)\n",
+    "sam.to(device)\n",
+    "predictor = SamPredictor(sam)\n",
+    "\n",
+    "# Open webcam\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "def apply_colored_mask(image, mask, color):\n",
+    "    \"\"\"Apply color to a binary mask and overlay on image.\"\"\"\n",
+    "    colored_mask = np.zeros_like(image)  # Create an empty colored mask (same size as image)\n",
+    "    colored_mask[mask == 255] = color  # Apply the color where the mask is active\n",
+    "    return cv2.addWeighted(image, 1, colored_mask, 0.6, 0)  # Blend original image with the mask\n",
+    "\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "\n",
+    "    # Resize the frame for faster processing\n",
+    "    resized_frame = cv2.resize(frame, (256, 256))\n",
+    "    resized_frame_rgb = cv2.cvtColor(resized_frame, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "    # Use SAM to predict the mask for the frame\n",
+    "    predictor.set_image(resized_frame_rgb)\n",
+    "    masks, scores, logits = predictor.predict(point_coords=None, point_labels=None, multimask_output=True)\n",
+    "\n",
+    "    # Loop over the masks (choose the highest score mask for simplicity)\n",
+    "    best_mask_index = np.argmax(scores)\n",
+    "    best_mask = masks[best_mask_index].astype(np.uint8) * 255  # Convert to binary mask\n",
+    "\n",
+    "    # Generate a random color for the mask\n",
+    "    color = np.random.randint(0, 255, size=(3,), dtype=int).tolist()  # Random BGR color\n",
+    "\n",
+    "    # Apply the colored mask to the frame\n",
+    "    colored_frame = apply_colored_mask(resized_frame, best_mask, color)\n",
+    "\n",
+    "    # Display the results\n",
+    "    cv2.imshow(\"Original Frame\", frame)\n",
+    "    cv2.imshow(\"Colored Segmentation Mask\", colored_frame)\n",
+    "\n",
+    "    # Press 'q' to quit\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
+   ]
   }
  ],
  "metadata": {
