updated the code for semantic segmentation

--- a/Niryo-Coding-20240829/Untitled-1.ipynb
+++ b/Niryo-Coding-20240829/Untitled-1.ipynb
@@ -18,11 +18,13 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "'https://dl.fbaipublicfiles.com/segment_anything/sam_vit_b_01ec64.pth'"
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'https://dl.fbaipublicfiles.com/segment_anything/sam_vit_b_01ec64.pth'"
+   ]
   },
   {
    "cell_type": "code",
@@ -121,15 +123,17 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "### for colored mask"
+   "metadata": {},
+   "source": [
+    "### for colored mask"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import torch\n",
@@ -190,15 +194,17 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "### colored mask to circular objects"
+   "metadata": {},
+   "source": [
+    "### colored mask to circular objects"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import torch\n",
@@ -286,6 +292,107 @@
     "\n",
     "cap.release()\n",
     "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## code with semantic segmentation\n",
+    "import cv2\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "from segment_anything import SamPredictor, sam_model_registry\n",
+    "\n",
+    "# Initialize the SAM model (using the small version)\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "sam_checkpoint = \"./sam_vit_b.pth\"  # Make sure this path is correct\n",
+    "model_type = \"vit_b\"  # Use \"vit_b\" for the small version\n",
+    "\n",
+    "sam = sam_model_registry[model_type](checkpoint=sam_checkpoint)\n",
+    "sam.to(device)\n",
+    "predictor = SamPredictor(sam)\n",
+    "\n",
+    "def detect_circles(image):\n",
+    "    \"\"\"Detect circular objects in the frame using HoughCircles\"\"\"\n",
+    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    blurred = cv2.medianBlur(gray, 5)\n",
+    "    \n",
+    "    # Use HoughCircles to detect circles\n",
+    "    circles = cv2.HoughCircles(blurred, cv2.HOUGH_GRADIENT, dp=1.2, minDist=30, param1=50, param2=30, minRadius=10, maxRadius=100)\n",
+    "\n",
+    "    if circles is not None:\n",
+    "        circles = np.uint16(np.around(circles))\n",
+    "        return circles[0, :]  # Return the detected circles\n",
+    "    return None\n",
+    "\n",
+    "def apply_colored_mask(image, mask, color):\n",
+    "    \"\"\"Apply color to a binary mask and overlay it on the image.\"\"\"\n",
+    "    colored_mask = np.zeros_like(image)  # Create an empty mask the same size as the image\n",
+    "    colored_mask[mask == 255] = color  # Apply the color where the mask is active\n",
+    "    return cv2.addWeighted(image, 1, colored_mask, 0.6, 0)  # Blend original image with the mask\n",
+    "\n",
+    "# Load the input image from a file\n",
+    "image_path = \"path_to_your_image.jpg\"  # Replace with your image path\n",
+    "image = cv2.imread(image_path)\n",
+    "\n",
+    "if image is None:\n",
+    "    print(\"Error: Could not load image.\")\n",
+    "    exit()\n",
+    "\n",
+    "# Resize the image for faster processing\n",
+    "resized_image = cv2.resize(image, (640, 480))\n",
+    "resized_image_rgb = cv2.cvtColor(resized_image, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "# Detect circles in the image\n",
+    "circles = detect_circles(resized_image)\n",
+    "\n",
+    "if circles is not None:\n",
+    "    for circle in circles:\n",
+    "        x, y, r = circle\n",
+    "        # Create a mask for the detected circle\n",
+    "        mask = np.zeros_like(resized_image[:, :, 0])  # Create a black mask\n",
+    "        cv2.circle(mask, (x, y), r, 255, thickness=-1)  # Fill the circle region with white (255)\n",
+    "\n",
+    "        # Use SAM to predict the mask for the circular region only\n",
+    "        predictor.set_image(resized_image_rgb)\n",
+    "        masks, scores, logits = predictor.predict(point_coords=None, point_labels=None, multimask_output=True)\n",
+    "\n",
+    "        # Loop over the masks (choose the highest score mask for simplicity)\n",
+    "        best_mask_index = np.argmax(scores)\n",
+    "        best_mask = masks[best_mask_index].astype(np.uint8) * 255  # Convert to binary mask\n",
+    "\n",
+    "        # Combine circle mask and segmentation mask (apply segmentation only to the circular area)\n",
+    "        combined_mask = cv2.bitwise_and(best_mask, mask)\n",
+    "\n",
+    "        # Generate a random color for the mask\n",
+    "        color = np.random.randint(0, 255, size=(3,), dtype=int).tolist()  # Random BGR color\n",
+    "\n",
+    "        # Apply the colored mask to the image\n",
+    "        colored_image = apply_colored_mask(resized_image, combined_mask, color)\n",
+    "\n",
+    "        # Draw the detected circle (optional for visualization)\n",
+    "        cv2.circle(resized_image, (x, y), r, (0, 255, 0), 2)\n",
+    "\n",
+    "        # Display the results\n",
+    "        cv2.imshow(\"Colored Segmentation Mask\", colored_image)\n",
+    "else:\n",
+    "    cv2.imshow(\"Original Image\", resized_image)\n",
+    "\n",
+    "# Press any key to close the window\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l"
    ]
   }
  ],
