--- a/Niryo-Coding-20240829/Untitled-1.ipynb
+++ b/Niryo-Coding-20240829/Untitled-1.ipynb
@@ -392,7 +392,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l"
+    "limport cv2\n",
+    "import time\n",
+    "from segment_anything import SamPredictor, sam_model_registry\n",
+    "\n",
+    "# Load the SAM model\n",
+    "sam = sam_model_registry[\"vit_h\"](checkpoint=\"path/to/checkpoint.pth\")\n",
+    "predictor = SamPredictor(sam)\n",
+    "\n",
+    "# Open the webcam\n",
+    "cap = cv2.VideoCapture(0)  # Change '0' if you have multiple cameras\n",
+    "\n",
+    "# Capture an image every 3 seconds and perform segmentation\n",
+    "while True:\n",
+    "    # Capture an image from the camera\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        print(\"Failed to capture image.\")\n",
+    "        break\n",
+    "\n",
+    "    # Set the image for segmentation\n",
+    "    predictor.set_image(frame)\n",
+    "    \n",
+    "    # You can provide manual points for segmentation, or let the model handle it based on other criteria\n",
+    "    # Example point (x, y) can be provided based on prior knowledge of chip locations\n",
+    "    masks, scores, _ = predictor.predict(point_coords=[[x, y]], point_labels=[1])\n",
+    "\n",
+    "    # Display the image with segmentation results (optional)\n",
+    "    binary_mask = (masks[0] > 0).astype(np.uint8)\n",
+    "    contours, _ = cv2.findContours(binary_mask, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    \n",
+    "    # Draw contours on the frame\n",
+    "    for contour in contours:\n",
+    "        perimeter = cv2.arcLength(contour, True)\n",
+    "        area = cv2.contourArea(contour)\n",
+    "        circularity = 4 * np.pi * (area / (perimeter * perimeter))\n",
+    "        if 0.7 <= circularity <= 1.2:  # Circularity close to 1 indicates a circle\n",
+    "            cv2.drawContours(frame, [contour], -1, (0, 255, 0), 2)\n",
+    "    \n",
+    "    # Show the processed image\n",
+    "    cv2.imshow('Segmented Image', frame)\n",
+    "\n",
+    "    # Wait for 3 seconds before capturing the next frame\n",
+    "    time.sleep(3)\n",
+    "\n",
+    "    # Break the loop if 'q' is pressed\n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "# Release the camera and close windows\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
    ]
   }
  ],
