spring school project

--- a/Niryo-Coding-20240829/Untitled-1.ipynb
+++ b/Niryo-Coding-20240829/Untitled-1.ipynb
@@ -444,6 +444,165 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyniryo2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Import required libraries for both camera streaming and segmentation\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyniryo2\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m  \u001b[38;5;66;03m# For controlling Niryo robot and accessing camera\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyniryo\u001b[39;00m  \u001b[38;5;66;03m# Additional functionalities from pyniryo2\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcv2\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mcv\u001b[39;00m  \u001b[38;5;66;03m# For image display and manipulation\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pyniryo2'"
+     ]
+    }
+   ],
+   "source": [
+    "#  LATEST SEGMENTATION CODE\n",
+    "# Import required libraries for both camera streaming and segmentation\n",
+    "from pyniryo2 import *  # For controlling Niryo robot and accessing camera\n",
+    "import pyniryo  # Additional functionalities from pyniryo2\n",
+    "import cv2 as cv  # For image display and manipulation\n",
+    "import torch  # For running the SAM model on GPU/CPU\n",
+    "import numpy as np  # For handling arrays and masks\n",
+    "from segment_anything import SamPredictor, sam_model_registry  # SAM model utilities for segmentation\n",
+    "import time  # For timing and frame rate adjustments\n",
+    "\n",
+    "# Set up the ROS instance for the Niryo robot, assuming the IP address is \"10.10.10.10\"\n",
+    "ros_instance = NiryoRos(\"10.10.10.10\")\n",
+    "\n",
+    "# Initialize the vision system for the Niryo robot's camera\n",
+    "vision = Vision(ros_instance)\n",
+    "\n",
+    "# Initialize the SAM model (using the small version)\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")  # Use GPU if available, otherwise use CPU\n",
+    "sam_checkpoint = \"sam_vit_b_01ec64.pth\"  # Path to the pre-trained SAM model checkpoint (small version)\n",
+    "model_type = \"vit_b\"  # Using the small version of the SAM model (vit_b)\n",
+    "\n",
+    "# Load the SAM model using the specified checkpoint and model type\n",
+    "sam = sam_model_registry[model_type](checkpoint=sam_checkpoint)\n",
+    "sam.to(device)  # Move the SAM model to the specified device (GPU/CPU)\n",
+    "predictor = SamPredictor(sam)  # Initialize the SAM predictor object\n",
+    "\n",
+    "# Define a function to detect circular objects using color thresholding\n",
+    "def detect_circles_by_color(image):\n",
+    "    \"\"\"Detect circular objects using color thresholding and contour analysis.\"\"\"\n",
+    "    # Convert the image to HSV color space for better color segmentation\n",
+    "    hsv = cv.cvtColor(image, cv.COLOR_BGR2HSV)\n",
+    "\n",
+    "    # Define the color range for detecting circles (for example, detecting red circles)\n",
+    "    lower_color = np.array([0, 100, 100])  # Lower bound of the color (e.g., red)\n",
+    "    upper_color = np.array([10, 255, 255])  # Upper bound of the color (e.g., red)\n",
+    "\n",
+    "    # Create a binary mask based on the defined color range\n",
+    "    mask = cv.inRange(hsv, lower_color, upper_color)\n",
+    "\n",
+    "    # Use morphological operations to reduce noise\n",
+    "    kernel = cv.getStructuringElement(cv.MORPH_ELLIPSE, (5, 5))\n",
+    "    mask = cv.morphologyEx(mask, cv.MORPH_CLOSE, kernel)  # Close small holes\n",
+    "    mask = cv.morphologyEx(mask, cv.MORPH_OPEN, kernel)   # Remove small noise\n",
+    "\n",
+    "    # Find contours in the binary mask\n",
+    "    contours, _ = cv.findContours(mask, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "    circles = []\n",
+    "    for contour in contours:\n",
+    "        # Approximate the contour and check if it is circular\n",
+    "        perimeter = cv.arcLength(contour, True)\n",
+    "        approx = cv.approxPolyDP(contour, 0.02 * perimeter, True)\n",
+    "\n",
+    "        if len(approx) >= 5:  # If the shape has enough vertices, consider it a circle\n",
+    "            (x, y), radius = cv.minEnclosingCircle(contour)\n",
+    "            circles.append((int(x), int(y), int(radius)))\n",
+    "\n",
+    "    return circles\n",
+    "\n",
+    "# Start the main loop to stream the Niryo camera and apply SAM segmentation\n",
+    "while True:\n",
+    "    # Step 1: Fetch the compressed image from the Niryo camera\n",
+    "    img_compressed = vision.get_img_compressed()\n",
+    "\n",
+    "    # Step 2: Get the camera calibration details (intrinsics and distortion coefficients)\n",
+    "    camera_info = vision.get_camera_intrinsics()\n",
+    "\n",
+    "    # Step 3: Uncompress the image to get it ready for processing\n",
+    "    img_uncompressed = pyniryo.uncompress_image(img_compressed)\n",
+    "\n",
+    "    # Step 4: Correct the image for camera distortion using the intrinsics and distortion coefficients\n",
+    "    img = pyniryo.undistort_image(img_uncompressed, camera_info.intrinsics, camera_info.distortion)\n",
+    "\n",
+    "    # Step 5: Resize the frame for processing (optional)\n",
+    "    resized_frame = cv.resize(img, (640, 480))\n",
+    "\n",
+    "    # Step 6: Detect circles in the resized frame using color thresholding\n",
+    "    circles = detect_circles_by_color(resized_frame)\n",
+    "\n",
+    "    # Step 7: Prepare to store masks for segmented circles\n",
+    "    if circles:\n",
+    "        for circle in circles:\n",
+    "            x, y, r = circle  # Get the circle's center (x, y) and radius (r)\n",
+    "\n",
+    "            # Create a mask for the detected circle\n",
+    "            circle_mask = np.zeros((resized_frame.shape[0], resized_frame.shape[1]), dtype=np.uint8)  # Create a black mask\n",
+    "            cv.circle(circle_mask, (x, y), r, 255, thickness=-1)  # Fill the circle region with white (255)\n",
+    "\n",
+    "            # Convert the resized frame to RGB format for SAM\n",
+    "            resized_frame_rgb = cv.cvtColor(resized_frame, cv.COLOR_BGR2RGB)\n",
+    "\n",
+    "            # Set the image for segmentation using SAM\n",
+    "            predictor.set_image(resized_frame_rgb)\n",
+    "\n",
+    "            # Perform semantic segmentation on the entire frame\n",
+    "            masks, scores, _ = predictor.predict(point_coords=None, point_labels=None)\n",
+    "\n",
+    "            # Use the best mask (highest score)\n",
+    "            best_mask_index = np.argmax(scores)\n",
+    "            best_mask = masks[best_mask_index].astype(np.uint8) * 255  # Convert the SAM mask to a binary mask (0 or 255)\n",
+    "\n",
+    "            # Combine the circle mask and the segmentation mask\n",
+    "            combined_mask = cv.bitwise_and(best_mask, circle_mask)\n",
+    "\n",
+    "            # Draw the contours of the combined mask on the original image\n",
+    "            contours, _ = cv.findContours(combined_mask, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
+    "            for contour in contours:\n",
+    "                cv.drawContours(resized_frame, [contour], -1, (0, 255, 0), 2)  # Draw contours in green\n",
+    "\n",
+    "    # Display the results\n",
+    "    cv.imshow(\"Segmented Circles\", resized_frame)\n",
+    "\n",
+    "    # Press 'q' to quit the loop\n",
+    "    if cv.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "# Cleanup resources\n",
+    "cv.destroyAllWindows()  # Close all OpenCV windows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
