updated the position

--- a/Niryo-Coding-20240829/movement/movement.ipynb
+++ b/Niryo-Coding-20240829/movement/movement.ipynb
@@ -18,10 +18,7 @@
     "# Connect to robot & calibrate\n",
     "robot = NiryoRobot(robot_ip_address)\n",
     "robot.arm.calibrate_auto()\n",
-    "from recorded_positions import pickup_coordinates,dropoff_coordinates\n",
-    "\n",
-    "\n",
-    "\n"
+    "from recorded_positions import pickup_coordinates,dropoff_coordinates\n"
    ]
   },
   {
@@ -38,19 +35,11 @@
     }
    ],
    "source": [
+    "# checks tool ID\n",
     "robot.tool.update_tool()\n",
-    "print (\"My current ToolID\", robot.tool.get_current_tool_id())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "robot.tool.release_with_tool()\n",
-    "def get_pickup_coordinates(p):\n",
-    "    return pickup_coordinates.get(p,'Invalid_position')"
+    "print (\"My current ToolID\", robot.tool.get_current_tool_id())\n",
+    "\n",
+    "robot.tool.release_with_tool()"
    ]
   },
   {
@@ -59,6 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_pickup_coordinates(p):\n",
+    "    return pickup_coordinates.get(p,'Invalid_position')\n",
     "def get_dropoff_coordinates(p):\n",
     "    return dropoff_coordinates.get(p,'Invalid_position')"
    ]
@@ -77,52 +68,7 @@
     "def go_down(position_coordinates):\n",
     "    coordinates=[0,0,0.03 ,0,0,0]\n",
     "    result = [a + b for a, b in zip(position_coordinates, coordinates)]\n",
-    "    robot.arm.move_pose(result)\n",
-    "\n",
-    "    \n",
-    "\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def go_home():\n",
-    "   print('home')\n",
-    "   robot.arm.move_pose([0.2249, 0.0161, 0.3155, -1.947, 1.509, -1.889])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#robot.arm.move_pose([0.2249, 0.0161, 0.3155, -1.947, 1.509, -1.889])\n",
-    "#x = 0.2249, y = 0.0161, z = 0.3155\n",
-    "#roll = -1.947, pitch = 1.509, yaw = -1.889"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.124, -0.0015, 0.3252, 2.724, 1.458, 2.661]\n"
-     ]
-    }
-   ],
-   "source": [
-    "home_position=get_pickup_coordinates('h0')\n",
-    "robot.arm.move_pose(home_position)\n",
-    "print(home_position)"
+    "    robot.arm.move_pose(result)"
    ]
   },
   {
@@ -146,46 +92,34 @@
     }
    ],
    "source": [
-    "# pickup position\n",
-    "\n",
-    "\n",
-    "# get the robot to the home_position first\n",
+    "# move robot to home position\n",
     "home_position=get_pickup_coordinates('h0')\n",
     "robot.arm.move_pose(home_position)\n",
     "print(home_position)\n",
+    "\n",
+    "# move robot to pick up and drop off position\n",
     "pick_up_position= input(\"what is the pick up position: \")\n",
     "drop_off_position= input(\"what is the drop off position: \")\n",
     "position_coordinates = get_pickup_coordinates(pick_up_position)\n",
-    "print(position_coordinates)\n",
     "robot.arm.move_pose(position_coordinates)\n",
     "print(f'Moved to position: {position_coordinates}')\n",
+    "\n",
     "pose_read = robot.arm.get_pose()\n",
     "print(f'current coordinates of the robot: {pose_read } ')\n",
     "robot.tool.grasp_with_tool()\n",
-    "go_up(position_coordinates)\n",
     "\n",
+    "go_up(position_coordinates)\n",
     "position_coordinates = get_dropoff_coordinates(drop_off_position)\n",
     "go_down(position_coordinates)\n",
     "robot.arm.move_pose(position_coordinates)\n",
-    "\n",
     "print(f'Moved to position: {position_coordinates}')\n",
     "pose_read = robot.arm.get_pose()\n",
     "print(f'current coordinates of the robot: {pose_read } ')\n",
     "robot.tool.release_with_tool()\n",
+    "\n",
+    "# move robot to home position\n",
     "robot.arm.move_pose(home_position)\n",
-    "\n",
-    "\n",
-    "# home position name is h0.\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "robot.arm.move_pose(home_position)"
+    "\n"
    ]
   },
   {
@@ -205,95 +139,6 @@
    "source": [
     "pose_read = robot.arm.get_pose()\n",
     "print(f'current coordinates of the robot: {pose_read } ')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'list' and 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/vision2/Desktop/spring_school-main/Niryo-Coding-20240829/movement.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/vision2/Desktop/spring_school-main/Niryo-Coding-20240829/movement.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m [\u001b[39m1\u001b[39;49m,\u001b[39m2\u001b[39;49m]\u001b[39m-\u001b[39;49m[\u001b[39m0\u001b[39;49m,\u001b[39m1\u001b[39;49m]\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'list'"
-     ]
-    }
-   ],
-   "source": [
-    "[1,2]-[0,1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# x = 0.1225, y = -0.0010, z = 0.0571 roll = 2.942, pitch = 1.411, yaw = 3.081 \n",
-    "\n",
-    "# x = 0.1214, y = -0.0003, z = 0.0796 roll = 2.891, pitch = 1.529, yaw = 3.011\n",
-    "\n",
-    "0.03 \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Move joints\n",
-    "#robot.arm.move_joints([0.0, 0.0, 0.0, 0.0, 0.0, 0.0])\n",
-    "# Turn learning mode ON\n",
-    "#robot.arm.set_learning_mode(True)\n",
-    "#robot.arm.move_joints([0.2, -0.3, 0.1, 0.0, 0.5, -0.8])\n",
-    "#robot.arm.move_joints([0.0, 0.0, 0.0, 0.0, 0.0, 0.0])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Move joints\n",
-    "#robot.arm.move_joints([0.0, 0.0, 0.0, 0.0, 0.0, 0.0])\n",
-    "# Turn learning mode ON\n",
-    "#robot.arm.set_learning_mode(True)\n",
-    "#robot.arm.move_joints([0.2, -0.3, 0.1, 0.0, 0.5, -0.8])\n",
-    "#robot.arm.move_joints([0.0, 0.0, 0.0, 0.0, 0.0, 0.0])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "'''\n",
-    "pick_pose = PoseObject(\n",
-    "x=0.30, y=0.0, z=0.15,\n",
-    "roll=0, pitch=1.57, yaw=0.0\n",
-    ")\n",
-    "first_place_pose = PoseObject(\n",
-    "    x=0.0, y=0.2, z=0.15,\n",
-    "    roll=0, pitch=1.57, yaw=0.0\n",
-    ")\n",
-    "for i in range(2):\n",
-    "    robot.arm.move_pose(pick_pose)\n",
-    "    new_place_pose = first_place_pose.copy_with_offsets(x_offset=0.05 * i)\n",
-    "    robot.arm.move_pose(new_place_pose)\n",
-    "\n",
-    "#robot.end()\n",
-    "# Stop TCP connection\n",
-    "robot.end()'''"
    ]
   }
  ],
