game logic updated

--- a/Niryo-Coding-20240829/game_logic.ipynb
+++ b/Niryo-Coding-20240829/game_logic.ipynb
@@ -207,7 +207,7 @@
     "    robot.tool.grasp_with_tool()\n",
     "    go_up(position_coordinates)\n",
     "\n",
-    "    position_coordinates = get_dropoff_coordinates(agent_move)\n",
+    "    position_coordinates = get_dropoff_coordinates(f'p{agent_move + 1}')\n",
     "    robot.arm.move_pose(position_coordinates)\n",
     "    go_down(position_coordinates)\n",
     "    robot.arm.move_pose(position_coordinates)\n",
@@ -256,6 +256,7 @@
     }
    ],
    "source": [
+    "from motion import movement\n",
     "\n",
     "# Main game loop\n",
     "def play_game():\n",
@@ -268,16 +269,19 @@
     "        agent = RandomAgent(game)  # Use Random agent\n",
     "\n",
     "    global player_positions_stored\n",
-    "    player_positions_stored=[]    # storing the positions which have chips\n",
+    "    player_positions_stored=[]    # storing the positions which player has played\n",
     "    global robot_positions_stored\n",
-    "    robot_positions_stored=[]\n",
+    "    robot_positions_stored=[]     # storing positions which robot has played\n",
     "    global pick_up_list\n",
-    "    pick_up_list=['c1','c2','c3','c4','c5']\n",
+    "    pick_up_list=['c1','c2','c3','c4','c5','c6,''c7','c8','c9','c10']\n",
+    "    pickup_index = 0\n",
+    "\n",
     "    # Game loop\n",
     "    while True:\n",
+    "        \n",
     "        # Player X's turn (user)\n",
-    "\n",
-    "        position_input = position_played[-1]\n",
+    "        players_input=position_played()\n",
+    "        position_input = players_input[-1]\n",
     "\n",
     "        position = int(position_input[1]) - 1  # Convert to 0-based index\n",
     "        if not game.make_move(position, \"X\"):  # If the move is invalid\n",
@@ -296,12 +300,13 @@
     "\n",
     "        \n",
     "        agent_move = agent.get_move()  # Get the move from the agent\n",
-    "        play_move(pick_up_list,agent_move)\n",
+    "\n",
+    "        movement(agent_move)\n",
     "\n",
     "        game.make_move(agent_move, \"O\") # Agent makes its move\n",
     "        print(f\"Agent plays at position: p{agent_move + 1}\")\n",
-    "        position_played= f'p{agent_move +1 }'\n",
-    "        robot_positions_stored.append(position_played)\n",
+    "        robot_positions_stored.append(f'p{agent_move + 1}')\n",
+    "\n",
     "        if game.is_winner(\"O\"):\n",
     "            print(\"Agent wins!\")\n",
     "            break\n",
@@ -316,25 +321,35 @@
     "play_game()\n",
     "from clear_field import clear_space\n",
     "\n",
-    "clear_space(robot_positions_stored,player_positions_stored)\n",
+    "movement(robot_positions_stored,player_positions_stored,clear_out=True)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "133a2608",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (681706079.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[15], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    from\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d36b2216",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
