--- a/Niryo-Coding-20240829/calibrating.ipynb
+++ b/Niryo-Coding-20240829/calibrating.ipynb
@@ -84,25 +84,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8fbb2e92",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 3, 4]\n",
-      "[3, 4]\n",
-      "[4]\n",
-      "[]\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "id": "1e4883e5",
    "metadata": {},
@@ -145,7 +126,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -159,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
