--- a/Niryo-Coding-20240829/game_logic.ipynb
+++ b/Niryo-Coding-20240829/game_logic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "d530cbb3",
    "metadata": {
     "ExecuteTime": {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "0fc8af4c",
    "metadata": {
     "ExecuteTime": {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "ff6d26d5",
    "metadata": {
     "ExecuteTime": {
@@ -151,12 +151,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d0e2a355",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'from semantic_segmentation import postion_played\\nfrom pyniryo2 import *\\nimport pyniryo\\nfrom matplotlib import pyplot as plt\\nimport cv2 as cv\\nimport time\\n\\n# robot_ip_address = \"10.10.10.10\"\\nrobot_ip_address = \"10.10.10.10\"\\n\\n# Connect to robot & calibrate\\nrobot = NiryoRobot(robot_ip_address)\\nrobot.arm.calibrate_auto()\\nfrom recorded_positions import pickup_coordinates,dropoff_coordinates'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from semantic_segmentation import postion_played\n",
+    "'''from semantic_segmentation import postion_played\n",
     "from pyniryo2 import *\n",
     "import pyniryo\n",
     "from matplotlib import pyplot as plt\n",
@@ -169,12 +180,12 @@
     "# Connect to robot & calibrate\n",
     "robot = NiryoRobot(robot_ip_address)\n",
     "robot.arm.calibrate_auto()\n",
-    "from recorded_positions import pickup_coordinates,dropoff_coordinates\n"
+    "from recorded_positions import pickup_coordinates,dropoff_coordinates'''\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "61eafaf5",
    "metadata": {},
    "outputs": [],
@@ -196,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cc289783",
    "metadata": {},
    "outputs": [],
@@ -219,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "429a756bb4d42054",
    "metadata": {
     "ExecuteTime": {
@@ -235,28 +246,57 @@
       "Choose an agent to play against:\n",
       "1. Minimax Agent (Hard)\n",
       "2. Random Agent (Easy)\n",
-      "Agent plays at position: p9\n",
-      "Agent plays at position: p6\n",
+      "Positions with blue: ['p1']\n",
+      "only p1\n",
+      "only 0\n",
+      "Agent plays at position: p2\n",
+      "Positions with blue: []\n",
+      "Positions with blue: ['p1']\n",
+      "only p1\n",
+      "only 0\n",
+      "Invalid move! Try again.\n",
+      "Positions with blue: []\n",
+      "Positions with blue: ['p1']\n",
+      "only p1\n",
+      "only 0\n",
+      "Invalid move! Try again.\n",
+      "Positions with blue: ['p1', 'p5']\n",
+      "only p5\n",
+      "only 4\n",
+      "Agent plays at position: p8\n",
+      "Positions with blue: ['p1', 'p9']\n",
+      "only p9\n",
+      "only 8\n",
       "You win!\n",
-      "['p1', 'p2', 'p3']\n",
-      "['p9', 'p6']\n"
+      "player position list ['1', '5', '9']\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'robot' is not defined",
+     "ename": "RobotCommandException",
+     "evalue": "Expected type: float.\nGiven: Invalid_position",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 56\u001b[0m\n\u001b[0;32m     53\u001b[0m play_game()\n\u001b[0;32m     54\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mclear_field\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m clear_space\n\u001b[1;32m---> 56\u001b[0m \u001b[43mclear_space\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrobot_positions_stored\u001b[49m\u001b[43m,\u001b[49m\u001b[43mplayer_positions_stored\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\kashi\\Desktop\\Working_projects\\spring_school\\spring_school\\Niryo-Coding-20240829\\clear_field.py:23\u001b[0m, in \u001b[0;36mclear_space\u001b[1;34m(played_positions_robot, played_positions_player)\u001b[0m\n\u001b[0;32m     20\u001b[0m player_storage_positions\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc6\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc7\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc8\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc9\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc10\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(played_positions_robot)):\n\u001b[1;32m---> 23\u001b[0m     \u001b[43mrobot\u001b[49m\u001b[38;5;241m.\u001b[39marm\u001b[38;5;241m.\u001b[39mmove_pose(get_pickup_coordinates(played_positions_robot(i)))\n\u001b[0;32m     24\u001b[0m     robot\u001b[38;5;241m.\u001b[39mtool\u001b[38;5;241m.\u001b[39mgrasp_with_tool()\n\u001b[0;32m     25\u001b[0m     go_up(get_pickup_coordinates(played_positions_robot(i)))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'robot' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pyniryo2/robot_commander.py:102\u001b[0m, in \u001b[0;36mRobotCommander._map_list\u001b[0;34m(self, list_, type_)\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 102\u001b[0m     map_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mmap\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtype_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlist_\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    103\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m map_list\n",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'I'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mRobotCommandException\u001b[0m                     Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 82\u001b[0m\n\u001b[1;32m     78\u001b[0m     \u001b[38;5;28mprint\u001b[39m(robot_positions_stored)\n\u001b[1;32m     81\u001b[0m \u001b[38;5;66;03m# Start the game\u001b[39;00m\n\u001b[0;32m---> 82\u001b[0m \u001b[43mplay_game\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[7], line 48\u001b[0m, in \u001b[0;36mplay_game\u001b[0;34m()\u001b[0m\n\u001b[1;32m     46\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou win!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     47\u001b[0m     \u001b[38;5;28mprint\u001b[39m( \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplayer position list\u001b[39m\u001b[38;5;124m'\u001b[39m,player_positions_stored)\n\u001b[0;32m---> 48\u001b[0m     \u001b[43mclear_out\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrobot_positions_stored\u001b[49m\u001b[43m,\u001b[49m\u001b[43mplayer_positions_stored\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     50\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m     51\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(game\u001b[38;5;241m.\u001b[39mavailable_moves()) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "File \u001b[0;32m~/Desktop/Spring_school_2024(Group_1))/Niryo-Coding-20240903/motion.py:75\u001b[0m, in \u001b[0;36mclear_out\u001b[0;34m(robot_positions_stored, player_positions_stored)\u001b[0m\n\u001b[1;32m     72\u001b[0m pick_up_list\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc1\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc2\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc3\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc4\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc5\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc6,\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc7\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc8\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc9\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc10\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     74\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(concatenated_list)):\n\u001b[0;32m---> 75\u001b[0m     \u001b[43mrobot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmove_pose\u001b[49m\u001b[43m(\u001b[49m\u001b[43mget_pickup_coordinates\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconcatenated_list\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     76\u001b[0m     robot\u001b[38;5;241m.\u001b[39mtool\u001b[38;5;241m.\u001b[39mgrasp_with_tool()\n\u001b[1;32m     77\u001b[0m     go_up(get_pickup_coordinates(concatenated_list[i]))\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pyniryo2/arm/arm.py:497\u001b[0m, in \u001b[0;36mArm.move_pose\u001b[0;34m(self, pose, frame, callback)\u001b[0m\n\u001b[1;32m    494\u001b[0m     pose_list \u001b[38;5;241m=\u001b[39m [frame_position[axis] \u001b[38;5;28;01mfor\u001b[39;00m axis \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mz\u001b[39m\u001b[38;5;124m\"\u001b[39m]] \u001b[38;5;241m+\u001b[39m \\\n\u001b[1;32m    495\u001b[0m         [frame_rpy[axis] \u001b[38;5;28;01mfor\u001b[39;00m axis \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mroll\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpitch\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myaw\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\n\u001b[1;32m    496\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 497\u001b[0m     pose_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__args_pose_to_list\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpose\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    499\u001b[0m goal \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_actions\u001b[38;5;241m.\u001b[39mget_move_pose_goal(pose_list)\n\u001b[1;32m    500\u001b[0m goal\u001b[38;5;241m.\u001b[39msend(result_callback\u001b[38;5;241m=\u001b[39mcallback)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pyniryo2/arm/arm.py:907\u001b[0m, in \u001b[0;36mArm.__args_pose_to_list\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m    904\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    905\u001b[0m     pose_list \u001b[38;5;241m=\u001b[39m args\n\u001b[0;32m--> 907\u001b[0m pose_list_float \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_map_list\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpose_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    908\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(pose_list_float) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m6\u001b[39m:\n\u001b[1;32m    909\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_raise_exception(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mA pose should contain 6 elements (x, y, z, roll, pitch, yaw)\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pyniryo2/robot_commander.py:105\u001b[0m, in \u001b[0;36mRobotCommander._map_list\u001b[0;34m(self, list_, type_)\u001b[0m\n\u001b[1;32m    103\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m map_list\n\u001b[1;32m    104\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m:\n\u001b[0;32m--> 105\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_raise_exception_expected_type\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtype_\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;18;43m__name__\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlist_\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pyniryo2/robot_commander.py:175\u001b[0m, in \u001b[0;36mRobotCommander._raise_exception_expected_type\u001b[0;34m(self, expected_type, given)\u001b[0m\n\u001b[1;32m    174\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_raise_exception_expected_type\u001b[39m(\u001b[38;5;28mself\u001b[39m, expected_type, given):\n\u001b[0;32m--> 175\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m RobotCommandException(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected type: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mGiven: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(expected_type, given))\n",
+      "\u001b[0;31mRobotCommandException\u001b[0m: Expected type: float.\nGiven: Invalid_position"
      ]
     }
    ],
    "source": [
     "from motion import movement\n",
+    "from motion import clear_out\n",
+    "from postions_played import positions_played\n",
     "\n",
     "# Main game loop\n",
     "def play_game():\n",
@@ -274,26 +314,39 @@
     "    robot_positions_stored=[]     # storing positions which robot has played\n",
     "    global pick_up_list\n",
     "    pick_up_list=['c1','c2','c3','c4','c5','c6,''c7','c8','c9','c10']\n",
+    "    global pickup_index\n",
     "    pickup_index = 0\n",
     "\n",
     "    # Game loop\n",
     "    while True:\n",
     "        \n",
     "        # Player X's turn (user)\n",
-    "        players_input=position_played()\n",
-    "        position_input = players_input[-1]\n",
+    "        players_input=positions_played()\n",
     "\n",
-    "        position = int(position_input[1]) - 1  # Convert to 0-based index\n",
+    "\n",
+    "        if len(players_input) > 0:\n",
+    "            position_input = players_input[-1]\n",
+    "        print('only',position_input)\n",
+    "        \n",
+    "\n",
+    "        position = int(position_input[1]) - 1 \n",
+    "        print('only',position)\n",
+    "        #print(int(position_input[1]) - 1 )\n",
+    "         # Convert to 0-based index\n",
     "        if not game.make_move(position, \"X\"):  # If the move is invalid\n",
     "            print(\"Invalid move! Try again.\")\n",
     "            continue\n",
-    "        player_positions_stored.append(position_input)\n",
+    "        player_positions_stored.append(f'p{position_input[-1]})\n",
     "        \n",
     "        if game.is_winner(\"X\"):\n",
     "            print(\"You win!\")\n",
+    "            print( 'player position list',player_positions_stored)\n",
+    "            clear_out(robot_positions_stored,player_positions_stored)\n",
+    "            \n",
     "            break\n",
     "        elif len(game.available_moves()) == 0:\n",
     "            print(\"It's a tie!\")\n",
+    "            clear_out(robot_positions_stored,player_positions_stored)\n",
     "            break\n",
     "\n",
     "        # Agent's turn (O)\n",
@@ -301,47 +354,36 @@
     "        \n",
     "        agent_move = agent.get_move()  # Get the move from the agent\n",
     "\n",
-    "        movement(agent_move)\n",
+    "        movement(agent_move+1,pickup_index=pickup_index)\n",
     "\n",
     "        game.make_move(agent_move, \"O\") # Agent makes its move\n",
-    "        print(f\"Agent plays at position: p{agent_move + 1}\")\n",
-    "        robot_positions_stored.append(f'p{agent_move + 1}')\n",
+    "        print(f\"Agent plays at position: p{agent_move+1}\")\n",
+    "        robot_positions_stored.append(f'p{agent_move+1}')\n",
+    "        pickup_index+=1\n",
+    "\n",
     "\n",
     "        if game.is_winner(\"O\"):\n",
     "            print(\"Agent wins!\")\n",
+    "            clear_out(robot_positions_stored,player_positions_stored)\n",
     "            break\n",
     "        elif len(game.available_moves()) == 0:\n",
     "            print(\"It's a tie!\")\n",
+    "            clear_out(robot_positions_stored,player_positions_stored)\n",
     "            break\n",
     "    print(player_positions_stored)\n",
     "    print(robot_positions_stored)\n",
     "\n",
     "\n",
     "# Start the game\n",
-    "play_game()\n",
-    "from clear_field import clear_space\n",
-    "\n",
-    "movement(robot_positions_stored,player_positions_stored,clear_out=True)\n",
-    "\n"
+    "play_game()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "133a2608",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -369,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
